# copy-paste-tool

./: .coverage  .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CopyPasteTool.spec  DEVELOPMENT.md  PRIVACY.md  README.md  codecov.yml  pyproject.toml  pytest.ini  requirements-ci.txt  requirements.txt
.github/workflows/: ci.yml
archive/: boards_reference.py
clipboard_manager/: __init__.py  boards.py  clipboard_item.py  gui.py  history.py  main.py  settings.py  storage.py  utils.py  watcher.py
scripts/: build_dmg.sh  drop_board_column.py  make_icns.sh  migrate_boards.py  monitor_db.py  strip_comments.py  test_attribution.py  test_attribution_run.py  test_persistence_run.py
tests/: gui_startup.py  smoke_pause_test.py  test_boards_more_pytest.py  test_boards_pytest.py  test_gui_interactions_pytest.py  test_gui_pytest.py  test_gui_settings_pytest.py  test_history_more_pytest.py  test_history_normalization.py  test_history_pytest.py  test_history_settings_callback.py  test_persistence_pytest.py  test_pins.py  test_secret_safe.py  test_settings_pytest.py  test_storage_pytest.py  test_utils.py  test_utils_additional_pytest.py  test_utils_internal_pytest.py  test_utils_more_pytest.py  test_utils_pytest.py  test_watcher_pytest.py
tmp_test_config/CopyPasteTool/: settings.json
